--- a/indotours/sample.html
+++ b/indotours/sample.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+<style type="text/css">
+.nav-link
+{
+  font-family: Lora;
+}
+</style>
+</head>
+<body>
 
+<div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top: 50px;">
+
+
+  <div class="col ">
+   
+   <div class="card bg-dark w-75 h-100">
+      <div class="card-body">
+      <h3 data-target="5000" class="count display-2 text-white text-center">0</h3>
+      <p class="text-white display-4 text-center">+</p>
+      <h1 class="display-5 text-white text-center">Trips</h1>
+    </div>
+  </div>
+  </div>
+
+
+ <div class="col">
+    <div class="card bg-dark w-75 h-100">
+      <div class="card-body">
+      <h3 data-target="200" class="count display-2 text-white text-center">0</h3>
+      <p class="text-white display-4 text-center">+</p>
+      <h1 class="display-5 text-white text-center">Destinations</h1>
+    </div>
+  </div>
+  </div>
+
+
+<div class="col">
+    <div class="card bg-dark w-75 h-100">
+      <div class="card-body">
+      <h3 data-target="10000" class="count display-2 text-white text-center">0</h3>
+      <p class="text-white display-4 text-center">+</p>
+      <h1 class="display-5 text-white text-center">Satisfied Customers</h1>
+    </div>
+  </div>
+  </div>
+
+
+
+ <script type="text/javascript">
+  
+
+      const counters = document.querySelectorAll(".count");
+const speed = 200;
+
+counters.forEach((counter) => {
+  const updateCount = () => {
+    const target = parseInt(+counter.getAttribute("data-target"));
+    const count = parseInt(+counter.innerText);
+    const increment = Math.trunc(target / speed);
+    console.log(increment);
+
+    if (count < target) {
+      counter.innerText = count + increment;
+      setTimeout(updateCount, 1);
+    } else {
+      count.innerText = target;
+    }
+  };
+  updateCount();
+});
+</script>
+
+</body>
+</html>
